--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index.mjs",
-    "dev": "env-cmd -f ./config/dev.env nodemon src/index.mjs"
+    "dev": "env-cmd -f ./config/dev.env nodemon src/index.mjs",
+    "test": "env-cmd -f ./config/test.env jest --watch",
+    "dev-test": "env-cmd -f ./config/test.env jest --watchAll --detectOpenHandles"
+  },
+  "jest": {
+    "testEnvironment": "node"
   },
   "keywords": [],
   "author": "",
@@ -23,6 +28,8 @@
   },
   "devDependencies": {
     "env-cmd": "^10.1.0",
-    "nodemon": "^2.0.15"
+    "jest": "^27.4.7",
+    "nodemon": "^2.0.15",
+    "supertest": "^6.2.2"
   }
 }
